--- a/downloads/index.html
+++ b/downloads/index.html
@@ -45,7 +45,7 @@
             <a href="https://bosniana.org/changelogs/index.html">Changelog</a>
             <a href="https://bosniana.org/downloads/index.html">Download</a>
             <p></p>
-            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="_blank">Installation Guide</a>
+            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="blank">Installation Guide</a>
             <a href="https://bosniana.org/wiki/index.html">Documentation</a>
         </div>
     </button>
@@ -78,7 +78,7 @@
 
 
 <div class="bodymargin"></div>
-<div class="container">
+<div class="container-fluid">
   <div class="container-fluid p-3 center-block">
     <div class="linija-dole"></div>
     <h2 class="text-center text-info-c">DOWNLOADS</h2>
@@ -88,93 +88,72 @@
     <h4 class=" text-dark text-center">Choose your preferred edition and download the ISO file. Please verify the <a href="##">checksum</a> before installation. </h4>
     <br>
   </div>
-  <div class="row">
-    <div class="col-md-6 mt-5">
-      <div class="card h-100 card-bckgr">
-        <div class="card-body">
-          <br>
-          <br>
-          <h3 class="card-title-b lead text-info-c">
-            <span class="nunito-dark">OpenBosniana OS</span> HOME
-          </h3>
-          <ul class="list-unstyled">
-            <li>
-              <a href="openbosniana-home-kde.html" class="btn-info btn btn-raised">DOWNLOADS</a>
-            </li>
-            <li>
-              <a href="##" class="btn btn-raised">RELEASE NOTES</a>
-            </li>
-            <li>
-              <a href="##" class="btn btn-raised">INSTALLATION INSTRUCTIONS</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+
+<section>
+    <div class="container-fluid shadow">
+        <div class="row justify-content-between align-items-center">
+            <!-- left -->
+            <div class="col-md-4">
+                <a href="##"><img src="../project/bg-home.png" class="img-fluid"/></a><br><br>
+            </div>
+            <div class="title col-md-8 pl-lg-5">
+                <span class="pre-title">OpenBosniana OS</span>
+                <h2 class="h1">HOME Edition</h2>
+                <p>Operating system with Plasma desktop and application suite designed for workplace at both office and home.</p>
+                <div>
+                    <a href="openbosniana-home-kde.html" class="btn bg-info text-white">Download</a>
+                    <a href="##" class="btn btn-raised">Release Notes</a>
+                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                </div>
+            </div>
+        </div><br>
     </div>
-    <div class="col-md-6 mt-5">
-      <div class="card h-100 card-bckgr">
-        <div class="card-body">
-          <br>
-          <br>
-          <h3 class="card-title-b lead text-info-c color-warning">
-            <span class="nunito-dark">OpenBosniana OS</span> EDUCATION
-          </h3>
-          <ul class="list-unstyled">
-            <li>
-              <a href="openbosniana-edu-kde.html" class="btn-warning btn btn-raised">DOWNLOADS</a>
-            </li>
-            <li>
-              <a href="##" class="btn btn-raised">RELEASE NOTES</a>
-            </li>
-            <li>
-              <a href="##" class="btn btn-raised">INSTALLATION INSTRUCTIONS</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+</section>
+
+<section>
+    <div class="container-fluid shadow mt-2">
+        <div class="row justify-content-between align-items-center">
+
+            <div class="title col-md-8 pl-lg-5">
+                <span class="pre-title">OpenBosniana OS</span>
+                <h2 class="h1">EDUCATION Edition</h2>
+                <p>Operating system for all kinds of educational institutions from preschool to high school which provides integration of both students' and teacher's workplaces.</p>
+                <div>
+                    <a href="openbosniana-edu-kde.html" class="btn bg-warning text-black">Download</a>
+                    <a href="##" class="btn btn-raised">Release Notes</a>
+                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <a href="##"><img src="../project/edu.png" class="img-fluid"/></a><br><br>
+            </div>
+
+        </div><br>
     </div>
-    <div class="col-md-6 mt-5">
-      <div class="card h-100 card-bckgr">
-        <div class="card-body">
-          <br>
-          <br>
-          <h3 class="card-title-b lead text-info-c color-danger">
-            <span class="nunito-dark">OpenBosniana OS</span> SECURITY
-          </h3>
-          <ul class="list-unstyled">
-            <li>
-              <a href="##" class="btn-danger btn btn-raised">DOWNLOADS</a>
-            </li>
-            <li>
-              <a href="##" class="btn btn-raised">RELEASE NOTES</a>
-            </li>
-            <li>
-              <a href="##" class="btn btn-raised">INSTALLATION INSTRUCTIONS</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+</section>
+
+
+<section>
+    <div class="container-fluid shadow mt-2">
+        <div class="row justify-content-between align-items-center">
+            <!-- left -->
+            <div class="col-md-4">
+                <a href="##"><img src="../project/error.png" class="img-fluid"/></a><br><br>
+            </div>
+            <div class="title col-md-8 pl-lg-5">
+                <span class="pre-title">OpenBosniana OS</span>
+                <h2 class="h1">SECURITY Edition</h2>
+                <p>Operating system with XFCE Desktop for penetration testers and security researchers.</p>
+                <div>
+                    <a href="##" class="btn bg-danger text-white">Download</a>
+                    <a href="##" class="btn btn-raised">Release Notes</a>
+                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                </div>
+            </div>
+        </div><br>
     </div>
-    <div class="col-md-6 mt-5">
-      <div class="card h-100 card-bckgr">
-        <div class="card-body">
-          <br>
-          <br>
-          <h3 class="card-title-b lead text-info-c">
-            <span class="nunito-dark">OpenBosniana OS</span> OTHER RELEASES
-          </h3>
-          <ul class="list-unstyled">
-            <li>
-              <a href="##" class="btn btn-raised">DOWNLOADS</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
+</section>
 </div>
-<br>
-<br>
 
 
     <div class="ms-slidebar " id="ms-slidebar">
@@ -192,23 +171,18 @@
     </div>
 
 
+<footer>
+
 <div class="logo-font">
 <section id="sponsor">
-  <div class="sponsor pt-1 bg-sponsor">
-    <p class="text-white pb-1" style="letter-spacing:2px;">Powered by OpenBosniana OS</p>
-  </div>
-</section>
-</div>
-<div class="logo-font">
-<section id="sponsor">
-  <div class="sponsor pb-2 pt-2">
+  <div class="sponsor">
     <div class="linija-dole mb-2"></div>
-        <p style="letter-spacing:3px;"><b class="text-dark">Developed by</b> <a href="##" class="text-info-c" ><b>Denis Maslo</b></a></p>
+        <p style="letter-spacing:3px;"><b class="text-info">Developed by</b> <a href="##" class="text-white" ><b>Denis Maslo</b></a></p>
     <div class="linija-dole mt-2"></div>
   </div>
 </section>
 </div>
-<footer>
+
 <div class="logo-font">
 <section id="sponsor">
   <div class="sponsor pt-1">
