--- a/downloads/openbosniana-home-kde.html
+++ b/downloads/openbosniana-home-kde.html
@@ -44,7 +44,7 @@
             <a href="https://bosniana.org/changelogs/index.html">Changelog</a>
             <a href="https://bosniana.org/downloads/index.html">Download</a>
             <p></p>
-            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="_blank">Installation Guide</a>
+            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="blank">Installation Guide</a>
             <a href="https://bosniana.org/wiki/index.html">Documentation</a>
         </div>
     </button>
@@ -76,6 +76,7 @@
 </div>
 
 
+
 <div class="bodymargin"></div>
 <div class="container">
   <div class="container-fluid p-3 center-block">
@@ -83,62 +84,61 @@
     <h2 class="text-center text-info-c">DOWNLOADS</h2>
   </div>
   <div class="container">
-    <h4 class=" text-dark text-center">Choose your preferred flavor and download the ISO file. Please verify the <a href="#">checksum</a> before installation. </h4>
-    <br>
-    <div class="row">
-      <div class="container-fluid">
-        <div class="card h-100 card-bckgr">
-          <div class="card-body">
-            <br>
-            <br>
-            <h3 class="card-title-b lead text-info-c">
-              <span class="nunito-dark">OpenBosniana</span> HOME KDE Install x86-64
-            </h3>
-            <a href="https://sourceforge.net/projects/repo-os/files/ISO/testing/OpenBosniana-home-KDE-092024_amd64.iso/download" class="btn btn-info btn-raised nunito-dark p-3 mt-2">OpenBosniana-home-KDE-092024_amd64.iso</a>
-            <br>
-            <br>
-            <p>DEFAULT USER AND PASSWORD:</p>
-            <ul class="text-start text-dark ">
-              <li> Root/User login: <p class="text-danger"> user </p4>
+    <h4 class=" text-dark text-center">On this page you can download <a href="##">OpenBosniana OS</a> as an ISO image. </h4>
+    <br> </div>
+
+
+<section>
+    <div class="container-fluid shadow nunito-dark"><br>
+        <div class="row justify-content-between align-items-center">
+
+            <div class="title col-md-12 pl-lg-5">
+                <span class="pre-title">OpenBosniana OS</span>
+                <h2 class="h1">OpenBosniana HOME KDE Install x86-64 </h2>
+                    <a href="https://sourceforge.net/projects/repo-os/files/ISO/testing/OpenBosniana-home-KDE-092024_amd64.iso/download" target="blank" class="btn bg-info btn-raised text-white p-1">OPENBOSNIANA-HOME-KDE-092024_AMD64.ISO</a>
+            <p class="text-start nunito-dark mt-1">DEFAULT USER AND PASSWORD:</p>
+            <ul class="text-start nunito-dark">
+              <li> Root/User login: <p class="text-danger p-1"> user </p4>
               </li>
-              <li> Root/User password: <p class="text-danger"> openbosniana </p>
+              <li> Root/User password: <p class="text-danger p-1"> openbosniana </p>
               </li>
-            </ul>
-            <a href="##" class="btn btn-raised nunito-dark p-3 mt-2">Integrity check</a>
-          </div>
-        </div>
-      </div>
+            </ul><br>
+
+                <div>
+
+                    <a href="##" class="btn btn-raised">Release Notes</a>
+                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                </div>
+            </div>
+        </div><br>
+    </div><br>
+</section>
+
+<section>
+    <div class="container-fluid shadow nunito-dark mt-2"><br>
+        <div class="row justify-content-between align-items-center">
+
+            <div class="title col-md-12 pl-lg-5">
+                <span class="pre-title">OpenBosniana OS</span>
+                <h2 class="h1">OpenBosniana HOME KDE Live x86-64 </h2>
+                    <a href="https://sourceforge.net/projects/repo-os/files/ISO/testing/OpenBosniana-home-KDE-092024_amd64.iso/download" target="blank" class="btn bg-info btn-raised text-white p-1">OPENBOSNIANA-HOME-KDE-092024_AMD64.ISO</a>
+            <p class="text-start nunito-dark mt-1">DEFAULT USER AND PASSWORD:</p>
+            <ul class="text-start nunito-dark">
+              <li> Root/User login: <p class="text-danger p-1"> user </p4>
+              </li>
+              <li> Root/User password: <p class="text-danger p-1"> openbosniana </p>
+              </li>
+            </ul><br>
+                <div>
+
+                    <a href="##" class="btn btn-raised">Release Notes</a>
+                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                </div>
+            </div>
+        </div><br>
     </div>
-    <br>
-    <br>
-    <div class="row">
-      <div class="container-fluid">
-        <div class="card h-100 card-bckgr">
-          <div class="card-body">
-            <br>
-            <br>
-            <h3 class="card-title-b lead text-info-c">
-              <span class="nunito-dark">OpenBosniana</span> HOME KDE Live x86-64
-            </h3>
-            <a href="https://sourceforge.net/projects/repo-os/files/ISO/testing/OpenBosniana-home-KDE-092024_amd64.iso/download" class="btn btn-info btn-raised nunito-dark p-3 mt-2">OpenBosniana-home-KDE-092024_amd64.iso</a>
-            <br>
-            <br>
-            <p>DEFAULT USER AND PASSWOR:</p>
-            <ul class="text-start text-dark ">
-              <li> Root/User login: <p class="text-danger"> user </p4>
-              </li>
-              <li> Root/User password: <p class="text-danger"> openbosniana </p>
-              </li>
-            </ul>
-            <a href="##" class="btn btn-raised nunito-dark p-3 mt-2">Integrity check</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br>
-    <br>
-  </div>
-</div>
+</section><br><br>
+ </div>
 
 
     <div class="collapse navbar-collapse" id="ms-navbar">
@@ -157,23 +157,18 @@
  </div>
 
 
+<footer>
+
 <div class="logo-font">
 <section id="sponsor">
-  <div class="sponsor pt-1 bg-sponsor">
-    <p class="text-white pb-1" style="letter-spacing:2px;">Powered by OpenBosniana OS</p>
-  </div>
-</section>
-</div>
-<div class="logo-font">
-<section id="sponsor">
-  <div class="sponsor pb-2 pt-2">
+  <div class="sponsor">
     <div class="linija-dole mb-2"></div>
-        <p style="letter-spacing:3px;"><b class="text-dark">Developed by</b> <a href="##" class="text-info-c" ><b>Denis Maslo</b></a></p>
+        <p style="letter-spacing:3px;"><b class="text-info">Developed by</b> <a href="##" class="text-white" ><b>Denis Maslo</b></a></p>
     <div class="linija-dole mt-2"></div>
   </div>
 </section>
 </div>
-<footer>
+
 <div class="logo-font">
 <section id="sponsor">
   <div class="sponsor pt-1">
