--- a/downloads/index.html
+++ b/downloads/index.html
@@ -103,7 +103,7 @@
                 <div>
                     <a href="openbosniana-home-kde.html" class="btn bg-info text-white">Download</a>
                     <a href="##" class="btn btn-raised">Release Notes</a>
-                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                    <a href="../wiki/installation-guide/index.html" target="blank" class="btn btn-raised">Installation Guide</a>
                 </div>
             </div>
         </div><br>
@@ -121,7 +121,7 @@
                 <div>
                     <a href="openbosniana-edu-kde.html" class="btn bg-warning text-black">Download</a>
                     <a href="##" class="btn btn-raised">Release Notes</a>
-                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                    <a href="../wiki/installation-guide/index.html" target="blank" class="btn btn-raised">Installation Guide</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -147,13 +147,13 @@
                 <div>
                     <a href="##" class="btn bg-danger text-white">Download</a>
                     <a href="##" class="btn btn-raised">Release Notes</a>
-                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                    <a href="../wiki/installation-guide/index.html" target="blank" class="btn btn-raised">Installation Guide</a>
                 </div>
             </div>
         </div><br>
     </div>
 </section>
-</div>
+</div><br>
 
 
     <div class="ms-slidebar " id="ms-slidebar">
