--- a/downloads/openbosniana-home-kde.html
+++ b/downloads/openbosniana-home-kde.html
@@ -107,7 +107,7 @@
                 <div>
 
                     <a href="##" class="btn btn-raised">Release Notes</a>
-                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                    <a href="../wiki/installation-guide/index.html" target="blank" class="btn btn-raised">Installation Guide</a>
                 </div>
             </div>
         </div><br>
@@ -132,7 +132,7 @@
                 <div>
 
                     <a href="##" class="btn btn-raised">Release Notes</a>
-                    <a href="##" class="btn btn-raised">Installation Guide</a>
+                    <a href="../wiki/installation-guide/index.html" target="blank" class="btn btn-raised">Installation Guide</a>
                 </div>
             </div>
         </div><br>
