--- a/downloads/openbosniana-home-kde.html
+++ b/downloads/openbosniana-home-kde.html
@@ -98,9 +98,9 @@
                     <a href="https://sourceforge.net/projects/repo-os/files/ISO/testing/OpenBosniana-home-KDE-092024_amd64.iso/download" target="blank" class="btn bg-info btn-raised text-white p-1">OPENBOSNIANA-HOME-KDE-092024_AMD64.ISO</a>
             <p class="text-start nunito-dark mt-1">DEFAULT USER AND PASSWORD:</p>
             <ul class="text-start nunito-dark">
-              <li> Root/User login: <p class="text-danger p-1"> user </p4>
+              <li> USERNAME: <p class="text-danger p-1"> user </p4>
               </li>
-              <li> Root/User password: <p class="text-danger p-1"> openbosniana </p>
+              <li> PASSWORD: <p class="text-danger p-1"> openbosniana </p>
               </li>
             </ul><br>
 
@@ -124,9 +124,9 @@
                     <a href="https://sourceforge.net/projects/repo-os/files/ISO/testing/OpenBosniana-home-KDE-092024_amd64.iso/download" target="blank" class="btn bg-info btn-raised text-white p-1">OPENBOSNIANA-HOME-KDE-092024_AMD64.ISO</a>
             <p class="text-start nunito-dark mt-1">DEFAULT USER AND PASSWORD:</p>
             <ul class="text-start nunito-dark">
-              <li> Root/User login: <p class="text-danger p-1"> user </p4>
+              <li> USERNAME: <p class="text-danger p-1"> user </p4>
               </li>
-              <li> Root/User password: <p class="text-danger p-1"> openbosniana </p>
+              <li> PASSWORD: <p class="text-danger p-1"> openbosniana </p>
               </li>
             </ul><br>
                 <div>
