--- a/project/documentation.html
+++ b/project/documentation.html
@@ -270,41 +270,78 @@ $(document).ready(function() {
 </div>
 
 
-    <div class="ms-slidebar " id="ms-slidebar">
-            <ul class="ms-slidebar-menu" id="slidebar-menu">
-                <li class="nav-item"> <a href="../index.html"> <i class="ri-home-4-fill"></i> Home</a> </li>
-                <li class="nav-item"> <a href="../project/index.html">  <i class="ri-file-info-line"></i> Project</a> </li>
-                <li class="nav-item"> <a class="active" href="index.html">  <i class="ri-apps-line"></i> Packages</a> </li>
-                <li class="nav-item"> <a href="../wiki/index.html">  <i class="ri-book-2-line"></i> Wiki</a> </li>
-                <li class="nav-item"> <a href="../blog/index.html"> <i class="ri-news-line"></i> Blog</a> </li>
-                <li class="nav-item"> <a href="../gallery/index.html">  <i class="ri-image-fill"></i> Gallery</a> </li>
-                <li class="nav-item">  <a href="../downloads/index.html"> <i class="ri-download-2-fill"></i> Downloads</a> </li>
-                <li class="nav-item"> <a href="../bs/index.html">  <i class="ri-global-line"></i> Bosanski</a> </li>
-                <div class="linija-dole"></div>
-            </ul>
-    </div>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  <body>
+        <div class="col-md-9">
+          <div class="container-fluid p-3 center-block">
+            <div class="linija-dole"></div>
+            <h2 class="text-center text-info-c">DOCUMENTATION</h2>
+          </div>
+
 <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg fixed-top ms-navbar ms-navbar-primary">
-    <button class="nav-drop-menu" id="dropdownBtn">
-        <i class="ri-menu-unfold-3-fill" id="dropdownIcon"></i>
-        <div class="nav-dropdown-content navbar-color">
-            <p>Latest release</p>
-            <a href="https://bosniana.org/changelogs/index.html">Changelog</a>
-            <a href="https://bosniana.org/downloads/index.html">Download</a>
-            <p></p>
-            <a href="https://bosniana.org/wiki/installation-guide/index.html" target="blank">Installation Guide</a>
-            <a href="https://bosniana.org/wiki/index.html">Documentation</a>
+      <section class="bg-light">
+        <div class="container">
+          <div class="row justify-content-between align-items-center">
+            <div class="col-md-6 ">
+              <h4 class="text-info">Documentation</h4>
+              <h2 class="nunito-dark">Installation Guide</h2>
+              <br>
+              <p class="nunito-dark">The OpenBosniana OS Installation Guide helps you download the right ISO image, create your bootable media and install OpenBosniana OS on your computer.</p>
+              <br>
+              <p class="nunito-dark">It is available in <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
+                  <b>HTML</b>
+                </a> and <a target="_blank" href="https://bosniana.org/wiki/installation-guide/pdf/IntallationGuide.pdf">
+                  <b>PDF</b>
+                </a>. </p>
+            </div>
+            <div class="col-md-6 p-3">
+              <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
+                <img class="img-fluid" src="../assets/img/installation-guide.png" />
+              </a>
+            </div>
+          </div>
+          <br>
         </div>
-    </button>
-     <div class="container-fluid">
-          <a class="navbar-brand nav-vendor" href="/"></a>
+      </section>
+    </div><br>
+
+
+
+    <div class="container-fluid">
+      <section class="bg-light">
+        <div class="container">
+          <div class="row justify-content-between align-items-center">
+
+
+            <div class="col-md-6 p-3">
+              <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
+                <img class="img-fluid" src="../assets/img/installation-guide.png" />
+              </a>
+            </div>
+
+            <div class="col-md-6 ">
+              <h4 class="text-info">Documentation</h4>
+              <h2 class="nunito-dark">User Guide</h2>
+              <br>
+              <p class="nunito-dark">The OpenBosniana OS User Guide is a collection of articles to help you configure your system.</p>
+              <br>
+              <p class="nunito-dark">It is available in <a target="_blank" href="https://bosniana.org/wiki/installation-guide/index.html">
+                  <b>HTML</b>
+                </a> and <a target="_blank" href="https://bosniana.org/wiki/installation-guide/pdf/IntallationGuide.pdf">
+                  <b>PDF</b>
+                </a>. </p>
+            </div>
+
+          </div>
+          <br>
+        </div>
+      </section>
+    </div><br>
+
+        </div>
+      </div>
     </div>
-      <button class="btn-sakriveni">
-        <a href="bs/index.html" class="text-white">
-          <i class="ri-global-line"></i> BS </a>
-      </button>
-      <button class="ms-toggle-left" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" ar
+
+
+
 
     <div class="ms-slidebar " id="ms-slidebar">
             <ul class="ms-slidebar-menu" id="slidebar-menu">
