--- a/project/documentation.html
+++ b/project/documentation.html
@@ -1,206 +1,67 @@
-        <div class="linija-footer-gore"></div>
-<section class="bg-blog shadow"><br>
-  <div class="container-fluid">
-    <div class="row text-center justify-content-center">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Documentation | OpenBosniana OS | Free, Private, Secure | Free Linux Operating System </title>
+    <meta name="description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
+    <meta name="keywords" content="openBosniana OS, Bosniana OS, Debian Distro, Security,linux pentest, linux, lightweight, kde, distro, operating system, free operating system, linux download, windows linux, linux install, software linux, linux kernel, linux light, linux operating system, linux laptop, linux ubuntu, linux apps, linux basics, free software, free software foundation, open source, open source projects, linux mint, gaming linux, distro linux, linux desktop, linux os, easy to use, linuxlite, linux operating system download, download linux operating system, linux free, free os" />
+    <meta name="author" content="Denis Maslo">
 
-      <div class="col-4 col-md-2 mb-5">
-        <a href="https://www.gitlab.com/bosnianaos/" target="_blank">
-          <img class="gold-main-logo" src="assets/img/gl.svg" title="GitLab">
-        </a>
-      </div>
+    <meta property="og:site_name" content="OpenBosniana OS">
+    <meta property="og:title" content="
 
-      <div class="col-4 col-md-2 mb-5">
-        <a href="https://sourceforge.net/projects/repo-os/" target="_blank">
-          <img class="gold-main-logo" src="assets/img/sf.svg" title="SourceForge">
-        </a>
-      </div>
+            OpenBosniana OS | Free, Private, Secure | Free Linux Operating System
 
-      <div class="col-4 col-md-2 mb-5">
-        <a href="https://github.com/deniosm/" target="_blank">
-          <img class="gold-main-logo" src="assets/img/gh.svg" title="GitHub">
-        </a>
-      </div>
-
-    </div>
-    <div class="row text-center justify-content-center">
-
-      <div class="col-4 col-md-2 mb-5">
-        <a href="https://www.codeberg.org/deniosm/" target="_blank">
-          <img class="silver-main-logo" src="assets/img/cb.svg" title="Codeberg">
-        </a>
-      </div>
-
-      <div class="col-4 col-md-2 mb-5">
-        <a href="https://kernel.org/" target="_blank">
-          <img class="silver-main-logo" src="assets/img/kl.svg" title="Kernel.org">
-        </a>
-      </div>
-
-      <div class="col-4 col-md-2 mb-5">
-        <a href="https://www.linuxfoundation.org/" target="_blank">
-          <img class="silver-main-logo" src="assets/img/lf.svg" title="Linux Foundation">
-        </a>
-      </div>
-
-    </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row text-center justify-content-center">
-
-      <div class="col-12 mb-5">
-        <a href="https://www.bosniana.org">
-          <img class="openbosniana-main-logo shadow" src="assets/img/vendor-logo.svg" title="OpenBosniana OS">
-        </a>
-      </div>
-
-    </div>
-  </div>
-</section>
-<footer>
-  <div class="logo-font">
-    <section id="sponsor">
-      <div class="sponsor">
-        <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white">OpenBosniana<span class="text-info"> operating system and</span> bosniana.org <span class="text-info">website developed by:</span> <a href="##" class="text-white">Denis Maslo</a></p>
-
-        <p>
-          <i class="ri-mail-send-line"></i>
-          <a href="mailto:contact@bosniana.org">
-            <span class="text-light ml-1">Contact</span>
-          </a>
-        </p>
-
-        <p>
-          <i class="ri-mail-send-line"></i>
-          <a href="mailto:openbosniana_dev@bosniana.org">
-            <span class="text-light ml-1">Developers</span>
-          </a>
-        </p>
-
-        <div class="linija-footer mt-1 mb-1"></div>
-      </div>
-    </section>
-  </div>
-  <div class="footer-content">
-    <ul class="footer-links">
-
-      <li><a href="https://bosniana.org/">Home</a></li>
-
-      <li><a href="https://bosniana.org/project">Project</a></li>
-
-      <li><a href="https://bosniana.org/packages">Packages</a></li>
-
-      <li><a href="https://bosniana.org/wiki">Wiki</a></li>
-
-      <li><a href="https://bosniana.org/blog">Blog</a></li>
-
-      <li><a href="https://bosniana.org/gallery">Gallery</a></li>
-
-      <li><a href="https://bosniana.org/downloads">Downloads</a></li>
-
-    </ul>
-    <div class="linija-footer mb-1"></div>
-    <div id="copyright">
-      <p class="text-center">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries.</p>
-      <p class="text-center">
-        Copyright &copy; bosniana.org 2022 -
-        <script type="text/javascript">
-          document.write(new Date().getFullYear());
-        </script>
-      </p>
-    </div>
-  </div>
-</footer>
-
-
-<script>
-  window.onscroll = function() {
-      const backToTopButton = document.getElementById("backToTop");
-      if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-          backToTopButton.style.display = "block";
-      } else {
-          backToTopButton.style.display = "none";
-      }
-  };
-
-  document.getElementById("backToTop").onclick = function() {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-  };
-</script>
-
-<script src="assets/js/plugins.min.js"></script>
-<!-- <script src="assets/js/openbosniana.js"></script> -->
-<script>
-function slidebar() {
-    var t = $(".ms-slidebar"),
-        o = $(".ms-site-container"),
-        n = $(".ms-toggle-left"),
-        i = false;
-
-    n.click(function() {
-        // Toggle custom sidebar
-        i = !i;
-        t.toggleClass("open", i);
-
-        // Optionally toggle Bootstrap's navbar collapse
-        var target = $(this).attr('data-bs-target');
-        if (target) {
-            $(target).collapse('toggle');
-        }
-
-        // Update menu icon and handle background change
-        updateMenuIcon(i);
-    });
-
-    o.click(function() {
-        if (i) {
-            t.removeClass("open");
-            i = false;
-            updateMenuIcon(i);
-        }
-    });
-
-    // To handle closing when clicking outside the sidebar
-    $(document).click(function(event) {
-        if (!$(event.target).closest('.ms-slidebar, .ms-toggle-left').length && i) {
-            t.removeClass("open");
-            i = false;
-            updateMenuIcon(i);
-        }
-    });
-
-    function updateMenuIcon(isOpen) {
-        const menuIcon = document.getElementById('menu-icon');
-        const button = document.querySelector('.ms-toggle-left');
-
-        if (isOpen) {
-            menuIcon.src = 'assets/img/close.svg';
-            button.style.backgroundColor = 'transparent';
-            button.style.transform = 'rotate(90deg)';
-            button.style.transition = 'all ease .40s';
-        } else {
-            menuIcon.src = 'assets/img/menu.svg';
-            button.style.backgroundColor = 'transparent';
-            button.style.transform = 'rotate(0deg)';
-            button.style.transition = 'all ease .40s';
-        }
-    }
-}
-
-$(document).ready(function() {
-    slidebar();
-});
-</script>
-    <script>
-        const dropdownBtn = document.getElementById('dropdownBtn');
-        const dropdownIcon = document.getElementById('dropdownIcon');
-
-        dropdownBtn.addEventListener('click', function () {
-            this.classList.toggle('active');
-        });
-    </script>
-</body>
-</html>
+    ">
+    <meta property="og:url" content="https://bosniana.org/project/documentation.html">
+    <meta property="og:description" content="OpenBosniana OS is a free, secure, multipurpose operating system...">
+    <meta property="og:type" content="website">
+    <link rel="canonical" href="https://www.bosniana.org/project/documentation.html">
+    <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="../rss.xml">
+    <link rel="manifest" href="../assets/favicon/manifest.json">
+    <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
+    <meta name="application-name" content="OpenBosniana OS"/>
+    <meta name="msapplication-TileColor" content="#00bcd4"/>
+    <meta name="msapplication-TileImage" content="../assets/favicon/144x144.png">
+    <meta name="msapplication-config" content="../assets/favicon/browserconfig.xml">
+    <link rel="stylesheet" href="../assets/css/fonts.css">
+    <link rel="shortcut icon" href="../assets/favicon/favicon.png">
+    <link rel="stylesheet" href="../assets/css/openbosniana.min.css">
+    <link rel="stylesheet" href="../assets/css/openbosniana-styles.css">
+    <link rel="stylesheet" href="../assets/css/openbosniana.css">
+    <link href="../assets/fonts/remixicon.css" rel="stylesheet">
+    <style>
+        .podebljano a { font-weight: bold;    font-family: 'Nunito'; }
+        .slika { width: calc(50% - 50px); float: left; padding-bottom:25px; padding-right:15px;}
+        .project1 { font-family: 'Nunito';display: block; margin: 0 0 10px 0; border-radius: 5px; text-decoration: none !important; left: 0; }
+        .project1 { width: 100%; padding: 10px 0 5px 0; }
+        .project1 > div { width: auto; margin: 0; clear: both; padding: 10px 0 10px 0; }
+        .project1 ul { list-style: outside disc; margin: 0 0 0 0; }
+        .project1 ul li { position: relative; left: 30px; margin-right: 30px; }
+        .project1 p { margin-bottom: 5px; }
+        img { max-width: 100%; vertical-align: middle; }
+        figure > img { display: block; }
+        .project-wrapper { margin-right: 0; margin-left: 0; }
+        .project1 .dwn-wrapper:after, .wrapper:after { content: ""; display: table; clear: both; }
+        .project1 .dwn-wrapper .dwn { display: block; background-color: #ccc; margin: 0 0 10px 0; border-radius: 5px; text-decoration: none !important; left: 0; }
+        .project1 .dwn-wrapper .dwn .dload { display: block; float: right; text-align: center; background-color: #eee; width: 100px; padding: 10px; margin: 20px 25px 0 0; border-radius: 5px; }
+        .project1 .dwn-wrapper .dwn .dload:hover { background-color: #ffc900; color: #333; }
+        .project1 .dwn-wrapper .dwn .dload-title { display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding: 18px 5px 18px 25px; color: #3f3f3f; }
+        .dwn1 { background-color: #ddd; float: left; padding: 10px; height: auto; border-radius: 5px; margin-right: 10px; text-align: left; }
+        .dwn { display: block; background-color: #ccc; margin: 0 0 10px 0; border-radius: 5px; text-decoration: none !important; left: 0; }
+        @media screen and (max-width: 4000px) { .dwn1 { width: 47%; } .ss { margin: 0 40px 20px 20px; } }
+        @media screen and (max-width: 1100px) { .project-wrapper { max-width: -webkit-calc(1100px - (30px)); max-width: calc(1100px - (30px)); } }
+        @media screen and (max-width: 1100px) { .project1 > div { width: 100%; } .slika { margin: 0 30px; } }
+        @media screen and (max-width: 600px) { .slika { margin: 10px auto; width: 100%; } }
+        .mobile-nav-n{display:none}
+        @media screen and (max-width: 767px) {
+            .position-sticky {display:none}
+            .about-menu {display:none}
+            .mobile-nav-n{display:flex;padding:5px 0 5px 0; } }
+    </style>
+</head>
 
 
   <body>
@@ -270,6 +131,74 @@ $(document).ready(function() {
 </div>
 
 
+
+    <div class="bodymargin"></div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3 navbar-color">
+          <div class="position-sticky" style="top: 3rem;">
+            <div class="about-menu  ">
+              <ul class="list-unstyled mb-0">
+                <a href="index.html">
+                  <li>Home</li>
+                </a>
+                <a href="education.html">
+                  <li>Education</li>
+                </a>
+                <a href="security.html">
+                  <li>Security</li>
+                </a>
+                <a href="core.html">
+                  <li>Core</li>
+                </a>
+                <a href="requirements.html">
+                  <li>Requirements </li>
+                </a>
+                <a href="#">
+                  <li class="about-active">Documentation</li>
+                </a>
+                <a href="about.html">
+                  <li>About</li>
+                </a>
+                <a href="faq.html">
+                  <li>FAQ</li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="mobile-nav-n">
+            <div class="container">
+              <header class="d-flex justify-content-center py-3">
+                <ul class="nav abouttext-men">
+                  <li class="nav-item">
+                    <a href="index.html" class="nav-link">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="education.html" class="nav-link" >Education</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="security.html" class="nav-link">Security</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="core.html" class="nav-link">Core</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="requirements.html" class="nav-link">Requirements</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link about-active">Documentation</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="about.html" class="nav-link">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="faq.html" class="nav-link">FAQ</a>
+                  </li>
+                </ul>
+              </header>
+            </div>
+          </div>
+        </div>
         <div class="col-md-9">
           <div class="container-fluid p-3 center-block">
             <div class="linija-dole"></div>
@@ -339,8 +268,6 @@ $(document).ready(function() {
         </div>
       </div>
     </div>
-
-
 
 
     <div class="ms-slidebar " id="ms-slidebar">
