--- a/index.html
+++ b/index.html
@@ -333,10 +333,10 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-12">
                     <div class="blog-grid-simple  bg-blog1">
-                        <img src="assets/img/img/blog/screen-2.1.x.jpg" alt="OpenBosniana Edu KDE 112024">
+                        <img src="project/edu.png" alt="OpenBosniana Edu KDE 112024">
                         <h4>OpenBosniana Edu KDE 112024 release note</h4>
                         <div class="blog-grid-simple-linija"></div>
-                        <p>The latest version of the Edu KDE amd64 series. Minor bugs fixed.</p>
+                        <p>The latest version of the Edu KDE amd64 series. New ISOs. Many improvements</p>
                         <div class="blog-grid-simple-content">
                             <div class="row blog-grid-simple-date color-danger">
                                 <div class="col-2 pr-0">
@@ -346,7 +346,7 @@
                                     <h5>2024/11/14</h5>
                                 </div>
                                 <div class="col-5 text-right">
-                                    <a href="blog/edu-kde-112024.html" class="btn-info-c">Read on blog</a>
+                                    <a href="blog/edu-112024/index.html" class="btn-info-c">Read on blog</a>
                                 </div>
                             </div>
                         </div>
