--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             </div>
 
             <div class="button-row-my mb-4 pb-2">
-                <a href="/download/" class="btn bg-info text-dark">Download</a>
+                <a href="/downloads/" class="btn bg-info text-dark">Download</a>
                 <a href="/project/" class="btn bg-danger text-white">Read more</a>
             </div>
         </div>
