--- a/index.html
+++ b/index.html
@@ -381,12 +381,50 @@
     </div>
     <br>
 
+<div class="container-fluid">
+      <section class="bg-light">
+        <div class="container shadow">
+          <div class="row justify-content-between align-items-center">
+            <div class="col-md-6 ">
+              <h4 class="text-info">Quick Start Guide</h4>
+              <h3 class="nunito-dark">Download</h3>
+
+              <p class="nunito-dark">Select and download the version and edition you want:</p>
+
+              <a href="/downloads/"><p class="nunito-dark">OpenBosniana OS
+                  <b>HOME</b></a></p>
+              <a href="/downloads/"><p class="nunito-dark">OpenBosniana OS
+                  <b>EDUCATION</b></a></p>
+              <a href="/downloads/"><p class="nunito-dark">OpenBosniana OS
+                  <b>SECURITY</b></a></p>
+              <a href="/gallery/" class="btn btn-raised">Gallery</a>
+              <a href="/project/" class="text-white btn btn-raised bg-info">More</a>
+              <a href="https://bosniana.org/wiki/installation-guide/choose/" target="_blank" class="btn btn-raised">Help</a>
+
+            </div>
+
+            <div class="col-md-6 ">
+              <h4 class="text-info">Quick Start Guide</h4>
+              <h3 class="nunito-dark">Boot OpenBosniana OS</h3>
+
+              <p class="nunito-dark">To burn an ISO image to a blank DVD or USB flash drive, <a href="https://bosniana.org/wiki/installation-guide/burn/" target="_blank"> use this guide.</a></p>
+
+              <h3 class="nunito-dark">Install OpenBosniana OS</h3>
+
+              <p class="nunito-dark"><a href="https://bosniana.org/wiki/installation-guide/install/" target="_blank"> Use this guide</a> to help with installation.</p>
+
+            </div>
+          </div>
+          <br>
+        </div>
+      </section>
+    </div><br>
 
 
-<div class="bg-blog">
+<br><div class="bg-blog">
     <div class="container-fluid">
                 <div class="card-body mt-2 pt-2">
-                    <h3 class="card-title-b text-info-c"><span class="nunito-dark">Latest News</span></h3>
+                    <h2 class="card-title-b text-info-c"><span class="nunito-dark">Latest News</span></h2>
                 </div>
 
     </div>
@@ -475,7 +513,7 @@
 
             <div class="pb-2 pt-2">
                 <div class="card-body mt-2 pt-2">
-                    <h3 class="card-title-b text-info-c"><span class="nunito-dark">Recent Updates</span></h3>
+                    <h2 class="card-title-b text-info-c"><span class="nunito-dark">Recent Updates</span></h2>
                     <p class="nunito-dark p-2 mt-2">
                         Latest updated packages. View more<a href="packages/index.html"> here</a>.
                     </p>
@@ -576,6 +614,7 @@
 
 
     </main>
+
 
     <div class="linija-footer-gore"></div>
 <section class="bg-blog shadow">
