--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             </h1>
                             <div class="naslovnamargin animated fadeInRight animation-delay-9">
                                 <h2 class="color-light pt-3 pl-2 pb-3 animated fadeInRight animation-delay-11">
-                                    <span ><strong class="text-info-c animated fadeInRight animation-delay-13">Free, </strong></span><span class="animated fadeInRight animation-delay-15">lightweight, </span><span class="text-info-c animated fadeInRight animation-delay-17">GNU/Linux </span>based operating system</h2>
+                                    <span ><strong class="text-info-c animated fadeInRight animation-delay-13">Free, </strong></span><span class="animated fadeInRight animation-delay-15">lightweight, secure, </span><span class="text-info-c animated fadeInRight animation-delay-17">GNU/Linux </span>operating system</h2>
                             </div>
                         </header>
                     </div>
