--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     <button class="nav-drop-menu" id="dropdownBtn">
         <i class="ri-menu-unfold-3-fill" id="dropdownIcon"></i>
         <div class="nav-dropdown-content navbar-color">
-            <p>Latest release</p>
-            <a href="https://bosniana.org/changelogs/">Changelog</a>
+            <p>Latest</p>
+            <a href="https://bosniana.org/blog/edu-112024/">Release Notes</a>
             <a href="https://bosniana.org/downloads/">Download</a>
             <p></p>
             <a href="https://bosniana.org/wiki/installation-guide/" target="blank">Installation Guide</a>
