--- a/bs/index.html
+++ b/bs/index.html
@@ -280,7 +280,7 @@
             </div>
 
             <div class="button-row-my mb-4 pb-2">
-                <a href="/bs/download/" class="btn bg-info text-dark">Preuzmi</a>
+                <a href="/bs/download/" class="btn bg-info text-dark">Preuzimanja</a>
                 <a href="/bs/project/" class="btn bg-danger text-white">Saznajte više</a>
             </div>
         </div>
