--- a/index.html
+++ b/index.html
@@ -673,8 +673,7 @@
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
 													<a href="##">OpenBosniana OS</a> and
 													<a href="##">bosniana.org</a> developed by:
-													<a href="##">Denis Maslo</a>
-        </p>
+													<a href="##">Denis Maslo</a> <a href="mailto:dennios@duck.com">| Private Email |</p>
         <p>
           <i class="ri-mail-send-line"></i>
           <a href="mailto:contact@bosniana.org">
